# rocket_demo

./: .env  Cargo.toml  README  Rocket.toml  diesel.toml
migrations/2023-10-02-123855_users/: up.sql
migrations/2023-10-03-123856_books/: up.sql
migrations/2023-10-05-135103_categories/: up.sql
migrations/2023-10-05-135143_books_categories/: down.sql  up.sql
src/: lib.rs  main.rs  statics.rs
src/db/: connection.rs  schema.rs
src/model/: books.rs  user.rs
src/provider/: books.rs  mod.rs  user.rs
src/routes/: greet.rs  user.rs
