[package]
name    = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blog"
path = "src/lib.rs"

[dependencies]
diesel               = { version = "2.1.1", features = ["postgres"] }
dotenvy              = "0.15.7"
rocket               = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
serde                = { version = "1.0.188", features = ["derive"] }

# axum = "0.7.2"
# tokio = { version = "1.34.0", features = ["full"] }
